style(checkbox and radio): adjusting redesign and fixing alignment
fixing the checkbox and radio buttons for the react-vapor redesign

--- a/packages/vapor/scss/controls/radios.scss
+++ b/packages/vapor/scss/controls/radios.scss
@@ -51,13 +51,13 @@
 
         &:checked + label {
             &:before {
-                border: 2px solid #1372ec; // digital-blue-60
+                border: 2px solid var(--medium-blue);
             }
 
             &:after {
-                z-index: 0;
-                background-color: #1372ec; // digital-blue-60
-                transform: scale(0.5);
+                background-color: var(--radiobutton-checked-color);
+                transform: scale(1);
+                content: 'hey';
             }
         }
 
