--- a/packages/vapor/scss/redesign/variables.scss
+++ b/packages/vapor/scss/redesign/variables.scss
@@ -221,6 +221,9 @@
     --checkbox-border-color: var(--navy-blue-80);
     --checkbox-checked-color: var(--digital-blue-60);
     --checkbox-text-color: var(--grey-100);
+    --checkbox-size: 22px;
+
+    --radiobutton-checked-color: var(--digital-blue-60);
 
     // Filter box
     --filter-box-icon-color: var(--grey-80);
